updated logs, logging and added a few more tests